# website

./: .gitignore  .gitmodules  README.md  components.json  declarations.d.ts  eslint.config.mjs  index.html  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  tailwind.config.ts  todo.txt  tsconfig.json  vitest.config.ts  wrangler.jsonc
app/: globals.css  layout.tsx  page.tsx
app/about/: content.tsx  page.tsx
app/contact/: ContactInfoDisplay.tsx  UnlockForm.tsx  contact-info-display.tsx  contactContext.tsx  content.tsx  decrypt.ts  encrypted.ts  page.tsx
app/dynamic/: page.tsx
app/hooks/: useCarouselTiming.ts
app/lib/: contentschema.ts  latexengines.ts  mdx-content.ts  nav.ts  pdf-utils.ts  swiftlatex  swiftlatex-prewarm.ts  typography.ts  yamltomdx.ts
app/projects/: page.tsx
app/projects-classic/: page.tsx
app/resume/: page.tsx
app/selector/: page.tsx
app/templates/: resume.tex.mustache
app/ui/: contact-unlock-form.tsx  copyPage.tsx  footer.tsx  header.tsx  navigation-header.tsx  navigationHeader.tsx  pdf.tsx  profiles-wheel.tsx  profiles.tsx  profiles_wheel.tsx  sectionHeaders.tsx
components/ui/: animated-text.tsx  (+6 more)
content/: calendupe.mdx  mergesort.mdx  nlf-scraper.mdx  subwaymap.mdx  sunrise.mdx  trafficrace.mdx  website.mdx
graphics/logogen/: Logo Generation.ipynb  candidates.json  logogen.py  make-favicons.sh  pyproject.toml
public/: about-wip.md  contact-wip.md  trafficracescreens.html
scripts/: encrypt-contact.js
test/: content-fs.ts  gen-reports.test.ts  invariants.test.ts  report.ts
(+111 files in other folders)
