[project]
name = "logogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "panel>=1.8.4",
    "panel-material-ui>=0.7.0",
    "pydantic>=2.12.5",
]

[tool.uv]
package = false
